--- a/style.css
+++ b/style.css
@@ -578,8 +578,8 @@ textarea::placeholder {
   background: #022b3a;
   height: 60px;
   display: flex;
-  width: 30vmin;
-  justify-content: space-around;
+  width: 50vmin;
+  justify-content: space-evenly;
   align-items: center;
   margin: 50px auto;
 }
@@ -987,6 +987,22 @@ textarea::placeholder {
     font-size: 22px;
     color: #235789;
   } */
+  .cv-button div {
+    height: 60%;
+  }
+  .cv-button img {
+    height: 40px;
+  }
+  .cv-button {
+    border-radius: 50px;
+    background: #022b3a;
+    height: 60px;
+    display: flex;
+    width: 30vmin;
+    justify-content: space-around;
+    align-items: center;
+    margin: 50px auto;
+  }
   /*------------------------ index desktop----------------------------- */
 
   .main-wrapper-index {
