--- a/style.css
+++ b/style.css
@@ -491,6 +491,9 @@ main {
 }
 
 input {
+  box-sizing: border-box;
+  border-radius: 2px;
+  outline: none;
   display: block;
   width: 100%;
   margin: 30px auto;
